# DeepLearningImageClassification

./: .gitignore  README.md  main.py  pyproject.toml  sweep.py
configs/: __init__.py  config.py  config_utils.py
configuration/cifar/: cifar_big.json  cifar_small.json
configuration/cinic/: Pretrained.json  cinic.json  sweep_config.yaml
configuration/cnn_architecture_comparison/: Classic.json  ResNet.json  ResNetDeep.json  VGGlike.json  run.sh
configuration/cnn_sweeps/: run_sweeps.sh  sweep_config.json
configuration/cnn_sweeps/grid/: config.json  run_sweeps.sh  sweep_config.json
configuration/cnn_sweeps/grid_base_dim_64/: Classic.json  (+4 more)
configuration/data_augmentation/: config.json  run_sweeps.sh  sweep_config.json
configuration/ensemble_architecture_voting/: Ensemble.json  run.sh
configuration/few-shot-sweep/: config.json  sweep_config.json
configuration/lr_and_base_dim/: config.json  run_sweeps.sh  sweep_config.json
configuration/lr_and_bs/: config.json  run_sweeps.sh  sweep_config.json
configuration/many_hyperparameters_random/: config.json  run_sweeps copy.sh  sweep_config.json
configuration/pretrained_sweeps/: Pretrained.json  sweep_config.json
configuration/regularization/: config.json  run_sweeps.sh  sweep_config.json
configuration/resnet_deep/: config.json  run_sweeps.sh  sweep_config.json
configuration/vit/: ViT.json
dataset/: dataset.py
engine/: __init__.py  base_engine.py  few_shot_engine.py  sweep_engine.py  train_engine.py
modeling/: loss.py  model.py
notebooks/: eda.ipynb  test.ipynb
utils/: config_merge.py  metrics.py
(+4 files in other folders)
